@@ -1,4 +1,5 @@
 0.07 - not yet released
+ - add Blikistan->magic_engine() method
  - Scrub all HTML by default
  - Properly truncate HTML
  - don't hide the rester password
